tests/ui/boolean_enforcement/fail/and_text_input.stderr
error[E0277]: `drizzle::postgres::types::Text` is not a boolean SQL type
  --> tests/ui/boolean_enforcement/fail/and_text_input.rs:14:13
   |
14 |     let _ = and([user.name]);
   |             ^^^^^^^^^^^^^^^^ logical operations require a boolean-typed expression
   |
   = help: the trait `BooleanLike` is not implemented for `drizzle::postgres::types::Text`
help: the following other types implement trait `BooleanLike`
  --> types/src/sql/mod.rs
   |
   | impl BooleanLike for crate::sqlite::types::Integer {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `drizzle::sqlite::types::Integer`
...
   | impl BooleanLike for crate::postgres::types::Boolean {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `drizzle::postgres::types::Boolean`
note: required by a bound in `and`
  --> core/src/expr/logical.rs
   |
   | pub fn and<'a, V, I, E>(
   |        --- required by a bound in this function
...
   |     E::SQLType: BooleanLike,
   |                 ^^^^^^^^^^^ required by this bound in `and`
